--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
           port: 22
           script: |
             cd /var/www/nextjs-app
-            find . -mindepth 1 ! -name '.env' -exec rm -rf {} +
+            find . -mindepth 1 ! -name '.env' ! -name 'deploy.zip' -exec rm -rf {} +
             unzip -o deploy.zip
             rm deploy.zip
             
